--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>My name is Kevin Fu</h2>
-								<p>Results-oriented data scientist with a MS in Data Science and 4+ years of experience in data analytics (hedge funds, investments). Eager to leverage my AI/Machine Learning & Finance expertise into predictive models that uncover actionable insights and spearhead high impact business decisions. An example of this is my Capstone project StockPickAI, which was selected as a Finalist for the Hal R. Varian Award at UC Berkeley.</p>
+								<p>Results-oriented data scientist with a MS in Data Science and 4+ years of experience in data analytics (hedge funds, investments). Eager to leverage my AI/Machine Learning & Finance expertise into predictive models that structure ambiguity, extract actionable insights, and spearhead high impact business decisions. An example of this is my Capstone project StockPickAI, which was selected as a Finalist for the Hal R. Varian Award at UC Berkeley.</p>
 								</header>
 								<a href="https://github.com/LifeGains/MIDS_projects/tree/master/W210%20StockPickAI" class="image main">
 									<img src="https://images.unsplash.com/photo-1563986768711-b3bde3dc821e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=868&q=80" alt="" /><br /><h2>Project 1: StockPickAI</h2></a>
-								<p>&#8226; One of the first ML-based stock prediction models geared towards the Retail Investor. Monthly recommendation of 5 stocks that are most likely to outperform the S&P 500 over the next calendar year. <br>&#8226; <b>Hal Varian Award Showcase Finalist</b> <br>&#8226; <b>Results/Model</b>: 55-60% Accuracy: XGBoost / +19.9% annualized vs. +8.9% S&P 500 (2004-2022). <br>&#8226; Tools: Python, SQL / Amazon AWS (EC2, S3) / XGBoost, Random Forest. </p>	
+								<p>&#8226; Monthly recommendation of 5 stocks, ranked by highest probability of outperforming the S&P 500 over the next calendar year. One of the first ML-based stock prediction models geared towards the Retail Investor. <br>&#8226; <b>Hal Varian Award Showcase Finalist</b> <br>&#8226; <b>Results/Model</b>: Outperformed the S&P 500 by 2x over roughly 20 yrs (2004-2022, +19% vs. +9% per yr) despite 57% accuracy <br>&#8226; Tools: Python, SQL | Amazon AWS (EC2, S3) | XGBoost, Random Forest, K Means Clustering </p>	
 								<ul class="actions special">
 									<li><a href="https://github.com/LifeGains/MIDS_projects/tree/master/W210%20StockPickAI" class="button large">Github</a></li>
 								</ul>
@@ -67,7 +67,7 @@
 										Flight Delay Prediction</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /></a>
-									<p>&#8226; Predict flight delays to decrease explicit (financial) and implicit (time) costs for both airlines and consumers alike. <br>&#8226; <b>Results/Model</b>: 84% Recall, Random Forest (% of delayed flights that are correctly classified as delayed). <br>&#8226; Tools: Python / Databricks / Random Forest, GBT, Logistic Regression. </p>
+									<p>&#8226; Predicts if a flight will be delayed, saving financial, temporal, and goodwill costs for the airline and customer alike <br>&#8226; <b>Results/Model</b>: 84% Recall <br>&#8226; Tools: Python, Spark, SQL | Databricks | Random Forest, Gradient Boosted Trees, Logistic Regression </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/tree/master/W261%20Flight%20Delay%20Prediction" class="button">Github</a></li>
 									</ul>
@@ -78,7 +78,7 @@
 										Subreddit Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1616509091215-57bbece93654?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80" alt="" /></a>
-									<p>&#8226; Accurately classify slang-heavy social media posts (using NLP techniques) in order to attract higher ad spending. <br>&#8226; Classification of deslanged social media posts likely to outperform those with slang/acronyms. <br>&#8226; <b>Results/Model</b>: 86% F1 Score, BERT Model. <br> Tools: Python / Colab / Deep Learning (BERT, T5, Recurrent Neural Networks), Naive Bayes. </p>
+									<p>&#8226; Created a social media topic classification model via NLP techniques to increase automation & attract higher ad spend. <br>&#8226; De-slanging slang-heavy social media posts likely improves correct classification of topics. <br>&#8226; <b>Results/Model</b>: 86% F1 Score <br> Tools: Python | GCP | Deep Learning (Transformers: BERT & T5, Recurrent Neural Networks), Naive Bayes </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/tree/master/W266%20Subreddit%20Classification" class="button">Github</a></li>
 									</ul>
@@ -89,7 +89,7 @@
 										Image Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="" /></a>
-									<p>&#8226; Created end-to-end computer vision solution that classifies 20 animal types with unstructured data. <br>&#8226; Combination of low amount of training data and compute resources yielded a low scoring model. <br>&#8226; <b>Results/Model</b>: 31% F1 Score, Support Vector Machines. <br>&#8226; Tools: Python / Colab / Deep Learning (Convolutional Neural Networks), Support Vector Machines, ResNet, PCA, T-SNE, Sobel, Harris Corners. </p>
+									<p>&#8226; Created end-to-end computer vision solution that classifies 20 different animal types with unstructured data. <br>&#8226; Heavier focus on feature engineering (synthetic image creation) than accurate classification. <br>&#8226; <b>Results/Model</b>: 32% F1 Score <br>&#8226; Tools: Python | Deep Learning (Convolutional Neural Networks), SVM, PCA/T-SNE, Sobel, Harris Corners </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/tree/master/W281%20Image%20Classification" class="button">Github</a></li>
 									</ul>
@@ -100,7 +100,7 @@
 										Impact of Patient Race vs. State Hospital’s Preparedness on COVID Mortality Rates</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y292aWR8ZW58MHx8MHx8&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
-									<p>&#8226; Determine if race or hospital preparedness was more important with respect to COVID mortality rates to help combat “fake news”. <br>&#8226; <b>Results</b>: State hospital preparedness held higher significance (higher coefficient value). <br>&#8226; Tools: R / R Studio / Linear & Logistic Regression. </p>
+									<p>&#8226; Determine if race or hospital preparedness was more important with respect to COVID mortality rates to help combat “fake news”. <br>&#8226; <b>Results</b>: State hospital preparedness held higher significance. <br>&#8226; Tools: R / R Studio / Linear & Logistic Regression. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/tree/master/W203%20Race%20vs.%20Hospital%20Preparedness%20on%20COVID%20Mortality%20Rates" class="button">Github</a></li>
 									</ul>
